# inkx

./: .gitignore  CMakeLists.txt  README.md  build.zig  display_file.sh  main.c  todo
data/dynamic_array/: test.c
data/gap_buffer/: gap_buffer.c  gap_buffer.h  main  test.c
data/text_struct/: text_struct.c
io/: io.c  io.claude  io.h  render_txt.claude
src/: README.md  io.cchat  main.c  main.cmulti
src/data/dynamic_array/: dynamicarray.c  dynamicarray.h  test
src/data/gap_buffer/: gap_buffer.c  gap_buffer.h  main.c  test
src/data/text_struct/: text_struct.h
src/ferror/: ferror.c  ferror.h
src/io/: io.c  io.h  render_txt.c  render_txt.h
